--- a/index.html
+++ b/index.html
@@ -121,9 +121,22 @@
 </head>
 <body>
   <h1>The Noncollective Archives</h1>
-  <div class="track-list">
-    <div class="track title-color-1"><div class="track-title"><span class="artist-name">Speculator —</span> <a href="#">Live at Disco Not Disco (Belgrade, Serbia)</a></div><div class="track-date">September 24, 2025</div></div>
+ <div class="track-list">
+  <div class="track title-color-1">
+    <div class="track-title">
+      <span class="artist-name">Speculator —</span>
+      <a href="#">Live at Disco Not Disco (Belgrade, Serbia)</a>
+    </div>
+    <div class="track-date">September 24, 2025</div>
   </div>
+  <div class="track title-color-2">
+    <div class="track-title">
+      <span class="artist-name">DavidM —</span>
+      <a href="#">Test</a>
+    </div>
+    <div class="track-date">September 19, 2025</div>
+  </div>
+</div>
 
   <footer>
     &copy; 2025 The Noncollective. All rights reserved.<br>
