--- a/index.html
+++ b/index.html
@@ -57,55 +57,17 @@
       transition: color 0.2s ease-in-out;
     }
 
-    .title-color-1  { color: red; }
-    .title-color-2  { color: blue; }
-    .title-color-3  { color: green; }
-    .title-color-4  { color: darkmagenta; }
-    .title-color-5  { color: darkorange; }
-    .title-color-6  { color: teal; }
-    .title-color-7  { color: olive; }
-    .title-color-8  { color: maroon; }
-    .title-color-9  { color: navy; }
-    .title-color-10 { color: fuchsia; }
-    .title-color-11 { color: seagreen; }
-    .title-color-12 { color: mediumvioletred; }
-    .title-color-13 { color: coral; }
-    .title-color-14 { color: firebrick; }
-    .title-color-15 { color: dodgerblue; }
-    .title-color-16 { color: forestgreen; }
-    .title-color-17 { color: indigo; }
-    .title-color-18 { color: goldenrod; }
-    .title-color-19 { color: mediumseagreen; }
-    .title-color-20 { color: peru; }
-    .title-color-21 { color: tomato; }
-    .title-color-22 { color: slateblue; }
-    .title-color-23 { color: deeppink; }
-    .title-color-24 { color: darkcyan; }
-
-    .title-color-1:hover  { color: mediumseagreen; }
-    .title-color-2:hover  { color: coral; }
-    .title-color-3:hover  { color: deeppink; }
-    .title-color-4:hover  { color: dodgerblue; }
-    .title-color-5:hover  { color: firebrick; }
-    .title-color-6:hover  { color: peru; }
-    .title-color-7:hover  { color: goldenrod; }
-    .title-color-8:hover  { color: forestgreen; }
-    .title-color-9:hover  { color: darkcyan; }
-    .title-color-10:hover { color: slateblue; }
-    .title-color-11:hover { color: indigo; }
-    .title-color-12:hover { color: tomato; }
-    .title-color-13:hover { color: green; }
-    .title-color-14:hover { color: olive; }
-    .title-color-15:hover { color: red; }
-    .title-color-16:hover { color: navy; }
-    .title-color-17:hover { color: fuchsia; }
-    .title-color-18:hover { color: blue; }
-    .title-color-19:hover { color: darkorange; }
-    .title-color-20:hover { color: teal; }
-    .title-color-21:hover { color: seagreen; }
-    .title-color-22:hover { color: maroon; }
-    .title-color-23:hover { color: darkmagenta; }
-    .title-color-24:hover { color: mediumvioletred; }
+    @media (max-width: 480px) {
+      .track {
+        padding: 0.5rem 0;
+      }
+      .track-title a {
+        word-break: break-word;
+      }
+      footer {
+        padding-bottom: 2rem;
+      }
+    }
 
     footer {
       text-align: left;
@@ -121,22 +83,9 @@
 </head>
 <body>
   <h1>The Noncollective Archives</h1>
- <div class="track-list">
-  <div class="track title-color-1">
-    <div class="track-title">
-      <span class="artist-name">Speculator —</span>
-      <a href="#">Live at Disco Not Disco (Belgrade, Serbia)</a>
-    </div>
-    <div class="track-date">September 24, 2025</div>
+  <div class="track-list">
+    <div class="track title-color-1"><div class="track-title"><span class="artist-name">Speculator —</span> <a href="#">Live at Disco Not Disco (Belgrade, Serbia)</a></div><div class="track-date">September 24, 2025</div></div>
   </div>
-  <div class="track title-color-2">
-    <div class="track-title">
-      <span class="artist-name">DavidM —</span>
-      <a href="#">Test</a>
-    </div>
-    <div class="track-date">September 19, 2025</div>
-  </div>
-</div>
 
   <footer>
     &copy; 2025 The Noncollective. All rights reserved.<br>
